# BulletHellMaker

./: .gitignore  Animatable.cpp  Animatable.h  Animation.h  Attack.cpp  Attack.h  AttackEditor.cpp  AttackEditor.h  AttackEditorPanel.cpp  AttackEditorPanel.h  AttackPattern.cpp  AttackPattern.h  AttacksListView.cpp  AttacksListView.h  AudioPlayer.cpp  AudioPlayer.h  AudioSettings.cpp  AudioSettings.h  BulletHellMaker.sln  BulletPathFactory.h  CMakeLists.txt  CollectibleSystem.cpp  CollectibleSystem.h  CollisionSystem.cpp  CollisionSystem.h  Components.cpp  Components.h  Constants.h  CopyPaste.cpp  CopyPaste.h  DeathAction.cpp  DeathAction.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DespawnSystem.cpp  DespawnSystem.h  EditorInstance.cpp  EditorInstance.h  EditorMovablePoint.cpp  EditorMovablePoint.h  (+83 more)
BulletHellMaker/: Animatable.h  Animation.cpp  Animation.h  Attack.cpp  Attack.h  AttackEditor.cpp  AttackEditorPanel.cpp  AttackEditorPanel.h  AttackPattern.cpp  AttackPattern.h  AttackPatternEditorPanel.cpp  AttackPatternEditorPanel.h  AudioPlayer.cpp  AudioPlayer.h  BlurEffect.cpp  BlurEffect.h  BulletHellMaker.vcxproj  CollectibleSystem.cpp  CollisionSystem.cpp  Components.cpp  Components.h  Constants.h  CopyPaste.cpp  CopyPaste.h  DeathAction.cpp  DeathAction.h  DebugRenderSystem.cpp  DebugRenderSystem.h  DespawnSystem.cpp  EMPABasedMovementEditorPanel.cpp  EMPABasedMovementEditorPanel.h  EditorMovablePoint.cpp  EditorMovablePoint.h  EditorMovablePointAction.cpp  EditorMovablePointAction.h  EditorMovablePointActionPanel.cpp  EditorMovablePointActionPanel.h  EditorMovablePointPanel.cpp  EditorMovablePointPanel.h  EditorMovablePointSpawnType.cpp  (+79 more)
BulletHellMaker/Level Packs/: attack_patterns.txt  attacks.txt  bullet_models.txt  enemies.txt  enemy_phases.txt  meta.txt
BulletHellMaker/Shaders/: Brightness.frag  tint.frag
BulletHellMaker/include/: Config.h  Constants.h  Cursors.h  GuiConfig.h  Mutex.h  matplotlibcpp.h  static_block.hpp
BulletHellMaker/src/: CMakeLists.txt  Main.cpp
BulletHellMaker/src/DataStructs/: IDGenerator.cpp  MovablePoint.cpp  SpriteEffectAnimation.cpp  SpriteLoader.cpp  SymbolTable.cpp  TimeFunctionVariable.cpp  UndoStack.cpp
BulletHellMaker/src/Editor/: CopyPaste.cpp  EditorWindow.cpp  ViewController.cpp
BulletHellMaker/src/Editor/Attack/: AttackEditorPanel.cpp  AttackEditorPropertiesPanel.cpp  EditorMovablePointTreePanel.cpp
BulletHellMaker/src/Editor/AttackPattern/: AttackPatternEditorPanel.cpp  AttackPatternEditorPropertiesPanel.cpp
BulletHellMaker/src/Editor/CustomWidgets/: AnimatableChooser.cpp  AnimatablePicture.cpp  BezierControlPointsPlacer.cpp  ChildWindow.cpp  ClickableTimeline.cpp  DelayedSlider.cpp  EMPAAngleOffsetGroup.cpp  EMPAListVisualizer.cpp  EditBox.cpp  EditorUtilities.cpp  HideableGroup.cpp  LevelPackSearchChildWindow.cpp  ListBoxScrollablePanel.cpp  ListView.cpp  ListViewScrollablePanel.cpp  MarkerPlacer.cpp  NumericalEditBoxWithLimits.cpp  SimpleEngineRenderer.cpp  SimpleWidgetsContainerPanel.cpp  SingleMarkerPlacer.cpp  Slider.cpp  SliderWithEditBox.cpp  SoundSettingsGroup.cpp  SpriteSheetMetafileSpritesEditor.cpp  SymbolTableEditor.cpp  TFVGroup.cpp  TabsWithPanel.cpp  TextNotification.cpp  TimedLabel.cpp
BulletHellMaker/src/Editor/EMP/: EditorMovablePointPanel.cpp
BulletHellMaker/src/Editor/EMPA/: EMPABasedMovementEditorPanel.cpp  EditorMovablePointActionPanel.cpp
BulletHellMaker/src/Editor/LevelPackObjectList/: LevelPackObjectsListPanel.cpp  LevelPackObjectsListView.cpp
BulletHellMaker/src/Editor/LevelPackObjectUseRelationship/: AttackPatternToAttackUseRelationshipEditor.cpp  LevelPackObjectUseRelationshipEditor.cpp
BulletHellMaker/src/Editor/Previewer/: LevelPackObjectPreviewPanel.cpp
BulletHellMaker/src/Editor/SpriteSheets/: SpriteSheetAnimationEditor.cpp  SpriteSheetMetafileEditor.cpp  SpriteSheetMetafileEditorContainer.cpp  SpriteSheetMetafileSpritesEditor.cpp  SpriteSheetsListPanel.cpp
BulletHellMaker/src/Editor/Util/: EditorUtils.cpp  ExtraSignals.cpp  TguiUtils.cpp
BulletHellMaker/src/Editor/Windows/: EditorWindow.cpp  LevelPackObjectPreviewWindow.cpp  MainEditorWindow.cpp  MainEditorWindowMenuBar.cpp
BulletHellMaker/src/Game/: AudioPlayer.cpp  EntityCreationQueue.cpp  GameInstance.cpp
BulletHellMaker/src/Game/Components/: AnimatableSetComponent.cpp  CollectibleComponent.cpp  Components.cpp  DespawnComponent.cpp  EMPSpawnerComponent.cpp  EnemyBulletComponent.cpp  EnemyComponent.cpp  HealthComponent.cpp  HitboxComponent.cpp  LevelManagerTag.cpp  MovementPathComponent.cpp  PlayerBulletComponent.cpp  PlayerTag.cpp  PositionComponent.cpp  ShadowTrailComponent.cpp  SpriteComponent.cpp
BulletHellMaker/src/Game/Systems/: CollectibleSystem.cpp  CollisionSystem.cpp  DebugRenderSystem.cpp  DespawnSystem.cpp  EnemySystem.cpp  MovementSystem.cpp  PlayerSystem.cpp  ShadowTrailSystem.cpp  SpriteAnimationSystem.cpp
BulletHellMaker/src/Game/Systems/RenderSystem/: BlurEffect.cpp  PostEffect.cpp  RenderSystem.cpp
BulletHellMaker/src/LevelPack/: Animatable.cpp  Animation.cpp  Attack.cpp  AttackPattern.cpp  DeathAction.cpp  EditorMovablePoint.cpp  EditorMovablePointAction.cpp  EditorMovablePointSpawnType.cpp  Enemy.cpp  EnemyPhase.cpp  EnemyPhaseAction.cpp  EnemyPhaseStartCondition.cpp  EnemySpawn.cpp  EntityAnimatableSet.cpp  Item.cpp  Level.cpp  LevelEvent.cpp  LevelEventStartCondition.cpp  LevelPack.cpp  LevelPackObject.cpp  Player.cpp  TextMarshallable.cpp
BulletHellMaker/src/Util/: IOUtils.cpp  MathUtils.cpp  StringUtils.cpp  TextFileParser.cpp
Level Packs/Default/: Default.txt  attack_patterns.txt  attacks.txt  bullet_models.txt  enemies.txt  levels.txt  meta.txt
Level Packs/test pack/: Default.txt  attack_patterns.txt  attacks.txt  bullet_models.txt  enemies.txt  levels.txt  (+3 more)
Level Packs/test pack - Copy/: meta.txt  sheet1.txt
References/: Expressions Compiling Tree.uxf  _TODO.txt
Shaders/: bright.frag  gaussian_blur.frag  glow.frag  n_linear_blur.frag  shadow_blur.frag
Tests/: Attack.cpp  CMakeLists.txt  Tests.cpp  Tests.vcxproj
Tests/src/LevelPack/: Attack.cpp
cmake/: Macros.cmake
(+139 files in other folders)
